<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialogBg"
    android:padding="@dimen/_16sdp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/ic_ten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCurrencyDetectedAmt"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_4sdp"
        android:gravity="center"
        android:text="@string/amtDetected"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvCurrencyMessage"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:gravity="start"
        android:text="@string/currencyMessage"
        android:textAlignment="inherit"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrencyDetectedAmt"
        tools:layout_editor_absoluteX="21dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmitToDevice"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onPrimary"
        app:backgroundTint="@color/md_theme_light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrencyMessage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textColor="@color/seed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmitToDevice"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
