<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_onPrimary"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/username_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_login"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/seed" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:textColor="@color/seed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsername"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/seed" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/forgot_password"
       app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tilPassword"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20sdp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onPrimary"
        app:backgroundTint="@color/md_theme_light_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_20sdp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onPrimary"
        app:backgroundTint="@color/md_theme_light_primary"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/_16sdp"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>
